# beatscore

./: .gitignore  README.md  core.html  core.html.md  index.ipynb  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: static.yml
beatscore/: _modidx.py  beatscore.py  core.py  test.py
examples/: index.html
nbs/: 00_core.ipynb  nbdev.yml
